@@ -8,7 +8,6 @@ use Module::Build;
 
 use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev$ =~ /\d+/gmx );
 
-my $dist     = q(lib/HTML/Accessors.pm);
 my $requires = { 'perl'                  => q(5.8),
                  'version'               => q(0.74),
                  'Class::Accessor::Fast' => q(0.31),
@@ -16,13 +15,15 @@ my $requires = { 'perl'                  => q(5.8),
                  'HTML::Tagset'          => q(3.10),
                  'NEXT'                  => q(0.60),
                  'Readonly'              => q(1.03) };
-my $build    = Module::Build->new( create_makefile_pl => q(traditional),
-                                   create_readme      => 1,
-                                   create_packlist    => 0,
-                                   dist_version_from  => $dist,
-                                   license            => q(perl),
-                                   module_name        => q(HTML::Accessors),
-                                   requires           => $requires );
+my $build = Module::Build->new
+   ( build_requires     => { 'version' => q(0.74) },
+     create_makefile_pl => q(traditional),
+     create_readme      => 1,
+     create_packlist    => 0,
+     dist_version_from  => q(lib/HTML/Accessors.pm),
+     license            => q(perl),
+     module_name        => q(HTML::Accessors),
+     requires           => $requires );
 
 $build->create_build_script();
 
